--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -12,12 +12,17 @@
     <body>
         <p>Teste de parágrafo</p>
         <a href="https://www.linkedin.com/in/pamela-evangelista-aa3477181/" target="_blank"> linkedin</a>
-        <p></p>
+        <br><br><br>
             <img src="./assets/OIP.jpg" widht="300" height="300">
             <img src="./assets/OIP (1).jpg" width="200" height="200">
             <img src="./assets/OIP (3).jpg" width="100" height="100">
-        <p></p>
+        </a>
+        <p>Meu nome é <B>Pamela Evangelista</B></p>
+        <b><p><i>Pamela Evangelista </p></b></i>
+        <button> Clique aqui</button>
+        <br><br><br>
         <h1>Teste h1</h1>
+        <br><br><br>
         <h2>Teste h2</h2>
         <h3>Teste h3</h3>
         <h4>Teste h4</h4>
