atualização da aula 4

--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen"/> <!--link-->
 </head>
 <body>
-    
-    <p>Cascading Style Sheets</p>
-    <ol type="a">
+    <h2>
+    <p class="titulo">Cascading Style Sheets</p>
+    <ol id="seletor"  type="a">
         <li>O seletor</li>
         <li>Bloco de declaração</li>
     </ol>
@@ -19,5 +19,6 @@
         <li>O seletor</li>
         <li>Bloco de declaração</li>
     </ul>
+
 </body>
 </html>
